--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <header>
+            <h1>Discover hidden places in the world around you.</h1>
+            <a href="#">Download Excursion (coming soon)</a>
+        </header>
         
+
         <script src="" async defer></script>
     </body>
 </html>
