styles and heading added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
             <h1>Discover hidden places in the world around you.</h1>
             <a href="#">Download Excursion (coming soon)</a>
         </header>
-        
+        <video loop autoplay>
+            <source src="./resources/css/excursion.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
 
         <script src="" async defer></script>
     </body>
