--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
             <source src="./resources/css/excursion.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
-
+          <h2>Your personal travel guide</h2>
+          <p>Excursion remembers places you like, and recommends new points of interest around you. </p>
+          <img src="./resources/css/camp.jpg">
+          <img>
+          <h2>Coming Soon for iPhone and Android</h2>
+          <a>Download Excursion (Coming Soon)</a>
+          <footer>
+            <p>copyright Excursion</p>
+          </footer>
         <script src="" async defer></script>
     </body>
 </html>
