--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             <a href="#">Download Excursion (coming soon)</a>
         </header>
         <video loop autoplay>
-            <source src="./resources/css/excursion.mp4" type="video/mp4">
+            <source src="./resources/videos/excursion.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
           <h2>Your personal travel guide</h2>
           <p>Excursion remembers places you like, and recommends new points of interest around you. </p>
-          <img src="./resources/css/camp.jpg">
+          <img src="./resources/images/camp.jpg">
           <img>
           <h2>Coming Soon for iPhone and Android</h2>
           <a>Download Excursion (Coming Soon)</a>
