only video and footer alignment left

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <![endif]-->
         <header>
             <h1>Discover hidden places in the world around you.</h1>
-            <a href="#">Download Excursion (coming soon)</a>
+            <a href="#">Download Excursion (coming soon!).</a>
         </header>
-        <video loop autoplay>
+        <video autoplay loop>
             <source src="./resources/videos/excursion.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -29,7 +29,7 @@
           <img src="./resources/images/camp.jpg">
           <img>
           <h2>Coming Soon for iPhone and Android</h2>
-          <a>Download Excursion (Coming Soon)</a>
+          <a href="#">Download Excursion (Coming Soon!).</a>
           <footer>
             <p>copyright Excursion</p>
           </footer>
