final changes applied

--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
             <h1>Discover hidden places in the world around you.</h1>
             <a href="#">Download Excursion (coming soon!).</a>
         </header>
-        <video autoplay loop>
+        <video autoplay muted loop>
             <source src="./resources/videos/excursion.mp4" type="video/mp4">
-            Your browser does not support the video tag.
           </video>
           <h2>Your personal travel guide</h2>
           <p>Excursion remembers places you like, and recommends new points of interest around you. </p>
@@ -31,7 +30,7 @@
           <h2>Coming Soon for iPhone and Android</h2>
           <a href="#">Download Excursion (Coming Soon!).</a>
           <footer>
-            <p>copyright Excursion</p>
+            <p>&copy Excursion</p>
           </footer>
         <script src="" async defer></script>
     </body>
