--- a/index.html
+++ b/index.html
@@ -20,18 +20,23 @@
             <h1>Discover hidden places in the world around you.</h1>
             <a href="#">Download Excursion (coming soon!).</a>
         </header>
-        <video autoplay muted loop>
-            <source src="./resources/videos/excursion.mp4" type="video/mp4">
-          </video>
+        <div class="video-container">
+            <video autoplay muted loop>
+                <source src="./resources/videos/excursion.mp4" type="video/mp4">
+            </video>
+        </div>
           <h2>Your personal travel guide</h2>
           <p>Excursion remembers places you like, and recommends new points of interest around you. </p>
+        <div class="image-container">
           <img src="./resources/images/camp.jpg">
-          <img>
+        </div>
+        <div class="last-section-container">
           <h2>Coming Soon for iPhone and Android</h2>
           <a href="#">Download Excursion (Coming Soon!).</a>
-          <footer>
+        </div>
+        <footer>
             <p>&copy Excursion</p>
-          </footer>
+        </footer>
         <script src="" async defer></script>
     </body>
-</html>
+   </html>
