--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
           <p>Excursion remembers places you like, and recommends new points of interest around you. </p>
         <div class="image-container">
           <img src="./resources/images/camp.jpg">
-        </div>
+      </div>
         <div class="last-section-container">
+          <img src="./resources/images/phone.png">
           <h2>Coming Soon for iPhone and Android</h2>
           <a href="#">Download Excursion (Coming Soon!).</a>
         </div>
